Fix Bug 299265 - Total number of filter criteria variable

FIXED-IN: 4.8.4
BUG: 299265
(cherry picked from commit 9716122384a4454ba7e32e805e0ce0626b3d1b39)